Prepare for Render deployment
- Updated settings.py for production deployment
- Added database URL configuration for PostgreSQL
- Added security settings (SSL, CSRF, HSTS)
- Added WhiteNoise for static file serving
- Updated requirements.txt with production dependencies

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,10 @@ Django==5.2.8
 Pillow==12.0.0
 django-crispy-forms==2.5.0
 crispy-bootstrap4==2025.6.0
+crispy-bootstrap5==2025.6.0
 gunicorn==23.0.0
 python-decouple==3.8
-crispy-bootstrap5==2025.6.0
 requests==2.31.0
-
+psycopg2-binary==2.9.9
+dj-database-url==2.1.0
+whitenoise==6.6.0
